# simple-llm

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  data.txt  data_en.txt
docs/: FROM_LM_TO_CHATBOT.md  HOW_IT_WORKS.md  IMPLEMENTATION_CHECKLIST.md  PROCESSING_FLOW.md  README.md  REAL_LLM_COMPARISON.md
src/: lib.rs  main.rs  working_transformer.rs
